stretch: fixed naviagtion

--- a/css/index.css
+++ b/css/index.css
@@ -378,6 +378,17 @@ p {
   animation-duration: 2s;
   animation-delay: 0s;
 }
+.fixed-nav {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  background-color: #FFFFFF;
+  opacity: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
 .navigation {
   display: flex;
   flex-direction: row;
@@ -406,6 +417,7 @@ p {
   letter-spacing: -1px;
 }
 .main-header {
+  margin-top: 105px;
   border-radius: 5px;
   width: 100%;
 }
